--- a/src/components/Templates/Templates.scss
+++ b/src/components/Templates/Templates.scss
@@ -45,7 +45,7 @@ select#choosenTemplate {
 .react-tagsinput {
   width: 100%;
   height: 100%;
-  border: 1px solid $color-grey;
+  border: 0.1rem solid rgba($color-grey-dark, 0.2);
   overflow: auto;
   padding: 0.5rem;
   background-color: $color-grey-light;
