--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -150,6 +150,7 @@ textarea#message {
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 1.5;
+  letter-spacing: 0.2rem;
   justify-self: start;
   align-self: center;
 }
