--- a/src/sass/grids.scss
+++ b/src/sass/grids.scss
@@ -83,7 +83,7 @@
 
 .saved__messages__grid {
   display: grid;
-  grid-template-columns: 7rem auto rem;
+  grid-template-columns: 7rem auto 7rem;
   grid-gap: 1rem;
   margin: 20px;
   padding: 1rem;
